--- a/404.html
+++ b/404.html
@@ -35,15 +35,23 @@
     <div class="dropdown" id="menu">
       <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
         data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="/assets/img/menu.png">
+        <img src="assets/img/menu.png">
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
+        <h3 class="menu-item"><a href="intro/index.html">Intro</a></h3>
         <h3 class="menu-item">
-          <a href="/games/index.html">Games</a>
+          <a href="games/index.html">Games</a>
         </h3>
-        <h3 class="menu-item"><a href="/memorial/accept.html">Memorial</a></h3>
-        <h3 class="menu-item"><a href="../../history/index.html">History</a></h3>
+
+        <h3 class="menu-item"><a href="memorial/index.html">Memorial</a></h3>
+        <ul>
+          <li><a href="memorial/listen.html">Listen</a></li>
+          <li><a href="memorial/read.html">Read</a></li>
+          <li><a href="memorial/prerecord.html">Record</a></li>
+          <li><a href="memorial/submit.html">Submit a written contribution</a></li>
+        </ul>
+        <h3 class="menu-item"><a href="history/index.html">History</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
       </ul>
