--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:url" content="https://youhavefoundconey.net/1884FM" />
   <meta property="og:title" content="1884 Experience | Coney" />
   <meta property="og:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
 " />
-  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="og:image" content="https://youhavefoundconey.net/1884FM/assets/img/landing.jpeg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:url" content="https://youhavefoundconey.net/1884FM" />
   <meta property="twitter:title" content="1884 Experience | Coney" />
   <meta property="twitter:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
 " />
-  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="twitter:image" content="https://youhavefoundconey.net/1884FM/assets/img/landing.jpeg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
 
