--- a/making.html
+++ b/making.html
@@ -15,19 +15,19 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:url" content="https://youhavefoundconey.net/1884FM" />
   <meta property="og:title" content="1884 Experience | Coney" />
   <meta property="og:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
 " />
-  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="og:image" content="https://youhavefoundconey.net/1884FM/assets/img/landing.jpeg" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:url" content="https://youhavefoundconey.net/1884FM" />
   <meta property="twitter:title" content="1884 Experience | Coney" />
   <meta property="twitter:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
 " />
-  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="twitter:image" content="https://youhavefoundconey.net/1884FM/assets/img/landing.jpeg" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
 
@@ -68,7 +68,14 @@
         <h3 class="menu-item">
           <a href="games/index.html">Games</a>
         </h3>
-        <h3 class="menu-item"><a href="memorial/accept.html">Memorial</a></h3>
+        <h3 class="menu-item"><a href="intro/index.html">Intro</a></h3>
+        <h3 class="menu-item"><a href="memorial/index.html">Memorial</a></h3>
+        <ul>
+          <li><a href="memorial/listen.html">Listen</a></li>
+          <li><a href="memorial/read.html">Read</a></li>
+          <li><a href="memorial/prerecord.html">Record</a></li>
+          <li><a href="memorial/submit.html">Submit a written contribution</a></li>
+        </ul>
         <h3 class="menu-item"><a href="history/index.html">History</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
@@ -77,12 +84,17 @@
   </header>
   <main class="" id="landing">
     <div class="main-container text">
-      <h1>Creative Team</h1>
-
-      <p>a video of Rhianna & Mareika talking about it</p>
-
-
-
+      <h1>About 1884</h1>
+      <br />
+      <p>Find out more about the making of 1884 by Rhianna Ilube and Coney.</p>
+      <br />
+      <div class="video-container">
+        <iframe class="yt-vid" width="560" height="315"
+          src="https://www.youtube.com/embed/cUY9vNBtcqk?si=Dc-QztKefCgm3u81" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
   </main>
 
 
