--- a/memorial/submit.html
+++ b/memorial/submit.html
@@ -7,8 +7,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="">
-  <meta name="description" content="">
+  <!-- Primary Meta Tags -->
+  <title>1884 Experience | Submit | Coney</title>
+  <meta name="title" content="1884 Experience | Coney" />
+  <meta name="description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://youhavefoundconey.net/1884FM" />
+  <meta property="og:title" content="1884 Experience | Coney" />
+  <meta property="og:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+  <meta property="og:image" content="https://youhavefoundconey.net/1884FM/assets/img/landing.jpeg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://youhavefoundconey.net/1884FM" />
+  <meta property="twitter:title" content="1884 Experience | Coney" />
+  <meta property="twitter:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+  <meta property="twitter:image" content="https://youhavefoundconey.net/1884FM/assets/img/landing.jpeg" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
 
 
 
@@ -31,8 +52,6 @@
   <!-- our scripts -->
   <script src="../scripts/email.js"></script>
 
-
-  <title>Submit Written Memory</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -48,10 +67,17 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
+        <h3 class="menu-item"><a href="../intro/index.html">Intro</a></h3>
         <h3 class="menu-item">
           <a href="../games/index.html">Games</a>
         </h3>
-        <h3 class="menu-item"><a href="../memorial/accept.html">Memorial</a></h3>
+        <h3 class="menu-item"><a href="../memorial/index.html">Memorial</a></h3>
+        <ul>
+          <li><a href="../memorial/listen.html">Listen</a></li>
+          <li><a href="../memorial/read.html">Read</a></li>
+          <li><a href="../memorial/prerecord.html">Record</a></li>
+          <li><a href="../memorial/submit.html">Submit a written contribution</a></li>
+        </ul>
         <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
         <a href=""><button>Close Menu</button></a>
 
