read styling, new menu

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Primary Meta Tags -->
-  <title>1884 Experience | Thanks | Coney</title>
+  <title>1884 Experience | About | Coney</title>
   <meta name="title" content="1884 Experience | Thanks | Coney" />
   <meta name="description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
 " />
@@ -67,7 +67,6 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
-        <h3 class="menu-item"><a href="intro/index.html">Intro</a></h3>
         <h3 class="menu-item">
           <a href="games/index.html">Games</a>
         </h3>
@@ -78,7 +77,8 @@
           <li><a href="memorial/prerecord.html">Record</a></li>
           <li><a href="memorial/submit.html">Submit a written contribution</a></li>
         </ul>
-        <h3 class="menu-item"><a href="history/index.html">History</a></h3>
+        <h3 class="menu-item"><a href="history/index.html">Resources</a></h3>
+        <h3 class="menu-item"><a href="../about.html">About</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
       </ul>
@@ -86,14 +86,14 @@
   </header>
   <main class="" id="landing">
     <div class="main-container text">
-      <h1>Thank you</h1>
+      <h1>About</h1>
       <br />
-      <p class="hidden" id="paragraph1">Thank you for visiting the 188.4FM experience. </p>
+      <p>Thank you for visiting the 188.4FM Experience. </p>
 
-      <p class="hidden" id="paragraph2">If you want to find out more about the making of the show behind 1884, click <a
-          href="making.html"><button>here</button></a> </p>
+      <p>If you want to find out more about the making of 1884 by Rhianna Ilube & Coney,
+        click <a href="making.html"><button>here</button></a> </p>
 
-      <p class="hidden" id="paragraph3">if you enjoyed it and think someone else would enjoy it too, why not share on <a
+      <p>If you enjoyed it and think someone else would enjoy it too, why not share on <a
           href="whatsapp://send?text=Have you heard about 1884? https://youhavefoundconey.net/1884FM"
           data-action="share/whatsapp/share" target="_blank">
           <button>WhatsApp</button> </a> or <a class="twitter-share-button"
@@ -104,13 +104,12 @@
         ? </p>
 
 
-      <p class="hidden" id="paragraph4">If you want to find out more about next Coney projects, please sign up for our
+      <p>If you want to find out more about next Coney projects, please sign up for our
         <a href="https://coneyhq.org/sign-up-to-our-mailing-list/" target="_blank"><button>Newsletter</button></a> or
         follow us on social media.
       </p>
 
-      <br />
-      <div id="paragraph5" class="icon-container socials hidden">
+      <div class="icon-container socials">
         <a href="https://www.instagram.com/agencyofconey/" target="_blank">
           <img src="assets/img/socials/insta.png" alt="instagram icon"></a>
         <a href="https://www.facebook.com/coneyhq/" target="_blank">
@@ -118,7 +117,16 @@
         <a href="https://twitter.com/agencyofconey" alt="twitter logo" target="_blank">
           <img src="assets/img/socials/twitter.png" /></a>
       </div>
+      <br /><br />
+      <br />
     </div>
+    <h3>Credits</h3>
+    <br />
+    <p>Rhianna Ilube - lead writer and game designer</p>
+    <p>Marie Klimis - writer and producer</p>
+    <p>Suzanna Hurst - creative programmer</p>
+    <p>Jess Sanders - graphic designer</p>
+
 
   </main>
 
