--- a/games/index.html
+++ b/games/index.html
@@ -294,7 +294,7 @@ setup.backThirty = () => {
     &lt;/ul&gt;
 &lt;h3 class=&quot;menu-item&quot;&gt;&lt;a href=&quot;../memorial/index.html&quot;&gt;Memorial&lt;/a&gt;&lt;/h3&gt;
 &lt;h3 class=&quot;menu-item&quot;&gt;&lt;a href=&quot;../history/index.html&quot;&gt;Resources&lt;/a&gt;&lt;/h3&gt;
-&lt;h3 class=&quot;menu-item&quot;&gt;&lt;a href=&quot;../thanks.html&quot;&gt;Keep in Touch&lt;/a&gt;&lt;/h3&gt;
+&lt;h3 class=&quot;menu-item&quot;&gt;&lt;a href=&quot;../about.html&quot;&gt;About&lt;/a&gt;&lt;/h3&gt;
   &lt;br/&gt;
   &lt;br/&gt;
 &lt;&lt;button &quot;Close Menu&quot;&gt;&gt;
