--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LH0R4XDEW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-7LH0R4XDEW');
+  </script>
 </head>
 
 <body id="landingBody" class="peach">
@@ -65,7 +73,7 @@
     <!-- <img src="./assets/img/1884components-24.png" alt="" class="wave" /> -->
 
     <img src="assets/img/1884components-25.png" alt="" class="tower" />
-    <a href="games/index.html" class="landing-btn">
+    <a href="menu.html" class="landing-btn">
       <button>
         <span>Start</span>
       </button>
