--- a/making.html
+++ b/making.html
@@ -57,7 +57,7 @@
 </head>
 
 <body id="landingBody">
-  <header class="general">
+  <header class="general making">
     <div class="dropdown" id="menu">
       <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
         data-bs-toggle="dropdown" aria-expanded="false">
@@ -68,7 +68,6 @@
         <h3 class="menu-item">
           <a href="games/index.html">Games</a>
         </h3>
-        <h3 class="menu-item"><a href="intro/index.html">Intro</a></h3>
         <h3 class="menu-item"><a href="memorial/index.html">Memorial</a></h3>
         <ul>
           <li><a href="memorial/listen.html">Listen</a></li>
@@ -76,7 +75,8 @@
           <li><a href="memorial/prerecord.html">Record</a></li>
           <li><a href="memorial/submit.html">Submit a written contribution</a></li>
         </ul>
-        <h3 class="menu-item"><a href="history/index.html">History</a></h3>
+        <h3 class="menu-item"><a href="history/index.html">Resources</a></h3>
+        <h3 class="menu-item"><a href="../about.html">About</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
       </ul>
