--- a/memorial/accept.html
+++ b/memorial/accept.html
@@ -69,7 +69,6 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
-        <h3 class="menu-item"><a href="../intro/index.html">Intro</a></h3>
         <h3 class="menu-item">
           <a href="../games/index.html">Games</a>
         </h3>
@@ -80,7 +79,8 @@
           <li><a href="../memorial/prerecord.html">Record</a></li>
           <li><a href="../memorial/submit.html">Submit a written contribution</a></li>
         </ul>
-        <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
+        <h3 class="menu-item"><a href="../history/index.html">Resources</a></h3>
+        <h3 class="menu-item"><a href="../about.html">About</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
       </ul>
