--- a/memorial/index.html
+++ b/memorial/index.html
@@ -54,27 +54,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LH0R4XDEW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-7LH0R4XDEW');
+  </script>
 </head>
 
 <body id="landingBody" class="peach">
-  <!-- <header class="general">
-    <div class="dropdown" id="menu">
-      <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
-        data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="../assets/img/menu.png">
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-        <h2 class="menu-title"> MENU </h2>
-        <h3 class="menu-item">
-          <a href="../games/index.html">Games</a>
-        </h3>
-        <h3 class="menu-item"><a href="../memorial/index.html">Memorial</a></h3>
-        <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
-        <a href=""><button>Close Menu</button></a>
-        </section>
-      </ul>
-    </div>
-  </header> -->
+
   <main class="landing record" id="landing">
     <main class="landing">
 
@@ -82,9 +72,9 @@
 
       <img src="../assets/img/1884components-25.png" alt="" class="tower" />
       <br />
-      <div class="landing-btn">
-        <a href="accept.html"><button>Enter</button></a>
-      </div>
+
+      <a href="accept.html" class="landing-btn"><button>Enter</button></a>
+
     </main>
 
   </main>
