--- a/memorial/submit.html
+++ b/memorial/submit.html
@@ -67,7 +67,6 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
-        <h3 class="menu-item"><a href="../intro/index.html">Intro</a></h3>
         <h3 class="menu-item">
           <a href="../games/index.html">Games</a>
         </h3>
@@ -78,7 +77,8 @@
           <li><a href="../memorial/prerecord.html">Record</a></li>
           <li><a href="../memorial/submit.html">Submit a written contribution</a></li>
         </ul>
-        <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
+        <h3 class="menu-item"><a href="../history/index.html">Resources</a></h3>
+        <h3 class="menu-item"><a href="../about.html">About</a></h3>
         <a href=""><button>Close Menu</button></a>
 
       </ul>
@@ -87,17 +87,20 @@
   <main class="text" id="landing">
     <div class="main-container text">
 
-      <!-- <h1>Memorial</h1>
-        <p>We recommend is first to <a href="./record.html"><button>Record</button></a> your own contribution to the
-          memorial.</p>
-  
-        <p> But if you prefer, you can skip this stage and <a href="./listen.html"><button>Listen</button></a> to the
-          stream of memories.</p> -->
-
       <h1>1884 Memorial <br />Submit Written Memory</h1>
       <br />
       <p>If you'd like to share a written memory, please use the form below.</p>
+      <p> Here are some prompt questions you could answer:</p>
 
+      <p class="provocation">What did the 1884 live show or digital experience make you feel or
+        think about?</p>
+
+      <p class="provocation">What are your reflections on the history of the 1884 Berlin
+        Conference, and how it is
+        remembered today?</p>
+
+      <p>But feel free to write whatever you feel like sharing.</p>
+      <br /><br />
       <form id="memoryForm">
         <!-- To simplify the tutorial, the value is static. -->
         <label><span>Your name</span>
@@ -108,7 +111,9 @@
           <textarea name="memory" rows="6"></textarea></label>
         <label class="checkbox-label">
           <input type="checkbox" name="consent" required>
-          <span>I consent to the processing of my data.</span>
+          <span>I accept the <a href="https://youhavefoundconey.net/1884FM/assets/1884memorialTOC.pdf" target="_blank"
+              rel="no-referrer" class="highlighted">terms and
+              conditions</a>.</span>
         </label>
         <label style="display:none;">
           <!-- Hidden field for honeypot -->
