--- a/memorial/record-b.html
+++ b/memorial/record-b.html
@@ -65,7 +65,6 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
-        <h3 class="menu-item"><a href="../intro/index.html">Intro</a></h3>
         <h3 class="menu-item">
           <a href="../games/index.html">Games</a>
         </h3>
@@ -76,7 +75,8 @@
           <li><a href="../memorial/prerecord.html">Record</a></li>
           <li><a href="../memorial/submit.html">Submit a written contribution</a></li>
         </ul>
-        <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
+        <h3 class="menu-item"><a href="../history/index.html">Resources</a></h3>
+        <h3 class="menu-item"><a href="../about.html">About</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
       </ul>
@@ -90,6 +90,11 @@
       <h1>1884 Memorial <br /> Record</h1>
       <br />
       <p> Please try to keep your recording to 30 sec or less.</p>
+      <p>By submitting a recording here, you agree to the <a
+          href="https://youhavefoundconey.net/1884FM/assets/1884memorialTOC.pdf" target="_blank" rel="no-referrer"
+          class="highlighted">terms and
+          conditions</a>.</p>
+      <br>
       <iframe src="https://www.speakpipe.com/widget/inline/f8yjj8pwd2ezkb1xnmrh1da67b8o9bbb" allow="microphone"
         width="100%" height="200" frameborder="0"></iframe>
 
