--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Primary Meta Tags -->
-  <title>1884 Experience | Memorial - Menu | Coney</title>
+  <title>1884 Experience | Menu | Coney</title>
   <meta name="title" content="1884 Experience | Coney" />
   <meta name="description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
 " />
@@ -33,7 +33,6 @@
 
 
 
-
   <!-- thirdparty styles -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -42,9 +41,8 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <!-- our styles -->
 
-  <link rel="stylesheet" href="../styles/generics.css">
-  <link rel="stylesheet" href="../styles/main.css">
-
+  <link rel="stylesheet" href="styles/generics.css">
+  <link rel="stylesheet" href="styles/main.css">
 
   <!-- tp scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
@@ -52,10 +50,20 @@
   <!-- our scripts -->
   <script src="../scripts/main.js"></script>
 
+
+
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LH0R4XDEW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-7LH0R4XDEW');
+  </script>
 </head>
 
 <body id="landingBody">
@@ -63,22 +71,16 @@
     <div class="dropdown" id="menu">
       <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
         data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="../assets/img/menu.png">
+        <img src="assets/img/menu.png">
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
-
         <h3 class="menu-item">
-          <a href="../games/index.html">Games</a>
+          <a href="games/index.html">Games</a>
         </h3>
-        <h3 class="menu-item"><a href="../memorial/index.html">Memorial</a></h3>
-        <ul>
-          <li><a href="../memorial/listen.html">Listen</a></li>
-          <li><a href="../memorial/read.html">Read</a></li>
-          <li><a href="../memorial/prerecord.html">Record</a></li>
-          <li><a href="../memorial/submit.html">Submit a written contribution</a></li>
-        </ul>
-        <h3 class="menu-item"><a href="../history/index.html">Resources</a></h3>
+        <h3 class="menu-item"><a href="memorial/index.html">Memorial</a></h3>
+
+        <h3 class="menu-item"><a href="history/index.html">Resources</a></h3>
         <h3 class="menu-item"><a href="../about.html">About</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
@@ -87,47 +89,42 @@
   </header>
   <main class="" id="landing">
 
-
-
     <div class="main-container text">
-      <section class="">
-        <h1>1884 Memorial</h1>
-        <br />
-        <p class="hidden" id="paragraph1"> We recommend first to <a href="prerecord.html"><button>record</button></a>
-          your own contribution to the
-          memorial.</p>
+      <p class="hidden" id="paragraph1">Welcome to the <span class="bold">1884FM Experience</span>, an interactive
+        digital experience exploring the
+        history of the 1884 Berlin
+        Conference.</p>
+      <p class="hidden" id="paragraph2">It was created by Rhianna Ilube & Coney, as part of their show <a
+          href="https://coneyhq.org/project/1884/" target="_blank" rel="no-referrer"
+          class="highlighted"><button>1884</button></a>.</p>
+      <p class="hidden" id="paragraph3"> There are three ways to enjoy the experience.</p>
+      <p class="hidden" id="paragraph4"> You can play a series of <span class="bold">games</span> to debunk myths about
+        1884 and discover the truth
+        behind them.</p>
+      <p class="hidden" id="paragraph5">
+        You can visit the 1884 <span class="bold">memorial</span> to read or listen to reflections about 1884 and
+        record your
+        own.
+      </p>
+      <p class="hidden" id="paragraph6"> Or you can access historical <span class="bold">resources</span>, articles and
+        podcasts.</p>
+      <p class="hidden" id="paragraph7"> You'll be able to visit any of these pages at any time by clicking on the menu
+        icon in the top right corner.
+      </p>
+      <div class="hidden" id="paragraph8">
+        <a href="intro/index.html"><button>Play and debunk history</button></a>
+        <br /><br />
+        <a href="memorial/index.html"><button>Visit the memorial directly</button></a>
+        <br /><br />
+        <a href="history/index.html"><button>Access historical resources</button></a>
+      </div>
 
-        <p class="hidden" id="paragraph2"> But if you prefer, you can skip this stage and <a
-            href="listen.html"><button>listen</button></a>
-          to the
-          stream of reflections from people that visited the memorial before you. </p>
-        <p class="hidden" id="paragraph3">They are playing in random order. If you
-          want to play the next one, press the Next button.</p>
-        <p class="hidden" id="paragraph4">There is also the option to <a href="read.html"><button>read</button></a> some
-          written memories. If you'd like to submit your own written memory, please <a
-            href="submit.html"><button>email</button></a>
-          us.</p>
 
-
-      </section>
     </div>
+
   </main>
-  <footer>
-    <div class="nav-wrapper">
-      <div class="nav-item">
-        <a href="../memorial/index.html"><button>Back</button></a>
-      </div>
-    </div>
-    <div class="nav-wrapper">
-      <div class="nav-item">
-        <a href="../about.html"><button>End</button></a>
-      </div>
-    </div>
-
-  </footer>
 
 
-  <script async src="https://www.speakpipe.com/widget/loader.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
